@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: April 28, 2009</p>
+      <p>Last Updated: May 7, 2009</p>
     </td>
   </tr>
 </table>
@@ -1398,12 +1398,19 @@ nuttx-0.4.6 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  -R .note.gnu.build-id -R .comment"  This has bin fixed in arch/arm/src/Makefile,
 	  but other architectures may have the same problem.  Thanks to Dave Marples
 	  for verifying this.
+	* Began adding support for the MicroMint Eagle100 board.  This board has a
+	  Luminary LM3S6918 Cortex-M3.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 buildroot-0.1.6 2009-xx-xx &lt;spudmonkey@racsa.co.cr&gt;
 
 	* Added config/arm7tdmi-defconfig-4.2.4
+	* Added config/arm920t-defconfig-4.3.3
+	* Correct error in arm-defconfig gcc-3.4.6 build. The gcc-3.4.6 configuration
+	  does not not take --with-abi
+	* Correct error in gcc-3.4.6/gcc/collect.c.  Calls open with O_CREAT but
+	  does not specify mode.  Newer host compilers can error out on this.
 </pre></ul>
 
 <table width ="100%">
